[tool.poetry]
name = "repl_python3_NDB"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
replit = "^3.1.0"
sqlalchemy = "^1.4.17"
flask-sqlalchemy = "^2.5.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
